--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -24,35 +24,86 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
 }
 
 body {
-    font-size: 18px;
+    font-size: 22px;
     background: $black;
     color: $white;
     font-family: $primary-font;
+
+    @media (max-width: $tablets) {
+        font-size: 12px!important;
+    }
 }
 
-h1 { font-size: 3rem; font-family: $secondary-font;}
-h2 { font-size: 2.5rem; }
-h3 { font-size: 2.1rem; }
-h4 { font-size: 1.8rem; }
-h5 { font-size: 1.6rem; }
-h6 { font-size: 1.4rem; }
+a {
+    color: inherit;
+}
+
+h1 { 
+    font-size: 2.6rem; 
+    font-family: $secondary-font;
+    
+    @media (max-width: $tablets) {
+        font-size: 1.8rem!important;
+    }
+}
+h2 { 
+    font-size: 1.7rem;
+    font-weight: 400;
+    
+    @media (max-width: $tablets) {
+        font-size: 1.4rem!important;
+    }
+}
+h3 { 
+    font-size: 2.1rem; 
+}
+h4 { 
+    font-size: 1.8rem; 
+}
+h5 { 
+    font-size: 1.6rem; 
+}
+h6 { 
+    font-size: 1.4rem; 
+}
+
+span, p {
+    line-height: 1.4rem;
+    margin: 1.3rem 0;
+    
+    @media (max-width: $tablets) {
+        line-height: 1rem!important;
+    }
+}
+
+button.border {
+    padding: 1rem 1.5rem;
+    border: 1px solid;
+    background: transparent;
+    cursor: pointer;
+    margin-top: 1rem;
+
+    &.white {
+        transition: background-color .5s ease, color .5s ease;
+        color: $white;
+        border-color: $white;
+        
+        &:hover {
+            color: $black;
+            background-color: $white;
+        }
+    }
+}
 
 
 // --------------- CONTAINERS---------------
 
 // background
 .container {
-    &:before {
-        z-index: -1;
-        content: '';
-        position: absolute;
-        opacity: 0.15;
-        width: 100%;
-        height: 100%;
-        background: url('../../images/background.gif') repeat 0 0;
-    }
+    background: url('../../images/background2.gif');
 }
 
