--- a/assets/styles/css/loader.css
+++ b/assets/styles/css/loader.css
@@ -4,21 +4,97 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  outline: none;
 }
 
 body {
-  font-size: 18px;
+  font-size: 22px;
   background: #000;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
 }
 
-.container:before {
-  z-index: -1;
-  content: '';
-  position: absolute;
-  opacity: 0.15;
-  width: 100%;
-  height: 100%;
-  background: url("../../images/background.gif") repeat 0 0;
+@media (max-width: 768px) {
+  body {
+    font-size: 12px !important;
+  }
+}
+
+a {
+  color: inherit;
+}
+
+h1 {
+  font-size: 2.6rem;
+  font-family: "Crimson Text", serif;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.8rem !important;
+  }
+}
+
+h2 {
+  font-size: 1.7rem;
+  font-weight: 400;
+}
+
+@media (max-width: 768px) {
+  h2 {
+    font-size: 1.4rem !important;
+  }
+}
+
+h3 {
+  font-size: 2.1rem;
+}
+
+h4 {
+  font-size: 1.8rem;
+}
+
+h5 {
+  font-size: 1.6rem;
+}
+
+h6 {
+  font-size: 1.4rem;
+}
+
+span, p {
+  line-height: 1.4rem;
+  margin: 1.3rem 0;
+}
+
+@media (max-width: 768px) {
+  span, p {
+    line-height: 1rem !important;
+  }
+}
+
+button.border {
+  padding: 1rem 1.5rem;
+  border: 1px solid;
+  background: transparent;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+
+button.border.white {
+  -webkit-transition: background-color .5s ease, color .5s ease;
+  transition: background-color .5s ease, color .5s ease;
+  color: #fff;
+  border-color: #fff;
+}
+
+button.border.white:hover {
+  color: #000;
+  background-color: #fff;
+}
+
+.container {
+  background: url("../../images/background2.gif");
 }
 
 .loader-container {
