--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -4,22 +4,48 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  outline: none;
 }
 
 body {
-  font-size: 18px;
+  font-size: 22px;
   background: #000;
   color: #fff;
   font-family: "Roboto", sans-serif;
 }
 
+@media (max-width: 768px) {
+  body {
+    font-size: 12px !important;
+  }
+}
+
+a {
+  color: inherit;
+}
+
 h1 {
-  font-size: 3rem;
+  font-size: 2.6rem;
   font-family: "Crimson Text", serif;
+  margin-bottom: 4rem;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.8rem !important;
+  }
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 1.7rem;
+  font-weight: 400;
+  margin-bottom: 4rem;
+}
+
+@media (max-width: 768px) {
+  h2 {
+    font-size: 1.4rem !important;
+  }
 }
 
 h3 {
@@ -38,13 +64,38 @@ h6 {
   font-size: 1.4rem;
 }
 
-.container:before {
-  z-index: -1;
-  content: '';
-  position: absolute;
-  opacity: 0.15;
-  width: 100%;
-  height: 100%;
-  background: url("../../images/background.gif") repeat 0 0;
+span, p {
+  line-height: 1.4rem;
+  margin: 1.3rem 0;
+}
+
+@media (max-width: 768px) {
+  span, p {
+    line-height: 1rem !important;
+  }
+}
+
+button.border {
+  padding: 1rem 1.5rem;
+  border: 1px solid;
+  background: transparent;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+
+button.border.white {
+  -webkit-transition: background-color .5s ease, color .5s ease;
+  transition: background-color .5s ease, color .5s ease;
+  color: #fff;
+  border-color: #fff;
+}
+
+button.border.white:hover {
+  color: #000;
+  background-color: #fff;
+}
+
+.container {
+  background: url("../../images/background2.gif");
 }
 /*# sourceMappingURL=main.css.map */
