--- a/assets/styles/css/intro.css
+++ b/assets/styles/css/intro.css
@@ -8,10 +8,12 @@
 }
 
 body {
+  background-image: url("../../images/background2.gif");
   font-size: 22px;
-  background: #000;
   color: #fff;
   font-family: "Roboto", sans-serif;
+  cursor: none;
+  scroll-behavior: smooth;
 }
 
 @media (max-width: 768px) {
@@ -20,26 +22,32 @@ body {
   }
 }
 
+button, a {
+  cursor: none;
+}
+
 a {
   color: inherit;
 }
 
 h1 {
-  font-size: 2.6rem;
+  font-size: 3.4rem;
   font-family: "Crimson Text", serif;
-  margin-bottom: 4rem;
+  margin: 0;
+  margin-bottom: 3rem;
 }
 
 @media (max-width: 768px) {
   h1 {
-    font-size: 1.8rem !important;
+    font-size: 1.6rem !important;
+    margin-bottom: 1rem;
   }
 }
 
 h2 {
   font-size: 1.7rem;
   font-weight: 400;
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
 }
 
 @media (max-width: 768px) {
@@ -50,6 +58,12 @@ h2 {
 
 h3 {
   font-size: 2.1rem;
+}
+
+@media (max-width: 768px) {
+  h3 {
+    font-size: 1.6rem !important;
+  }
 }
 
 h4 {
@@ -66,11 +80,12 @@ h6 {
 
 span, p {
   line-height: 1.4rem;
-  margin: 1.3rem 0;
+  margin: 3rem 0;
 }
 
 @media (max-width: 768px) {
   span, p {
+    margin: 1rem 0;
     line-height: 1rem !important;
   }
 }
@@ -79,8 +94,7 @@ button.border {
   padding: 1rem 1.5rem;
   border: 1px solid;
   background: transparent;
-  cursor: pointer;
-  margin-top: 1rem;
+  margin: 1rem 0;
 }
 
 button.border.white {
@@ -95,478 +109,86 @@ button.border.white:hover {
   background-color: #fff;
 }
 
-.container {
-  background: url("../../images/background2.gif");
-}
-
-header {
-  position: absolute;
-  left: 1rem;
-  top: 1rem;
-}
-
-@media (max-width: 768px) {
-  header {
-    left: 2rem;
-    top: 2rem;
-  }
-}
-
-body {
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
-}
-
-body::-webkit-scrollbar {
-  display: none;
-}
-
-.scrollbar {
+.cursor#circle {
   position: fixed;
-  right: 0;
-  top: 0;
+  width: 2rem;
+  height: 2rem;
+  border: 2px solid #fff;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 500px;
+  pointer-events: none;
+  -webkit-transition: .2s ease-out;
+  transition: .2s ease-out;
+  mix-blend-mode: difference;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  min-height: calc(100vh - 0rem);
-  padding: 1rem 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 500;
 }
 
-.scrollbar i {
-  position: absolute;
-  font-size: 2rem;
-  z-index: 10;
-  cursor: pointer;
-}
-
-.scrollbar .line {
-  position: absolute;
-  top: 1.5%;
-  width: 3px;
-  height: 0;
+.cursor#pointer {
+  position: fixed;
+  width: .2rem;
+  height: .2rem;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   border-radius: 500px;
-  background-color: #fff;
+  pointer-events: none;
+  -webkit-transition: .05s ease-out;
+  transition: .05s ease-out;
+  background: #fff;
+  mix-blend-mode: difference;
+  z-index: 500;
 }
 
-.scrollbar .line#bottom {
-  top: calc(1.5% + 3.1rem);
-  height: calc(98.5% - 3.1em);
-}
-
-.links {
+.container {
+  height: 200vh;
   position: absolute;
+  top: 5%;
+  left: 5%;
+  width: calc(100vw - 5% * 2  - 2em);
+  margin: 0 auto;
+  margin-left: 2em;
+  pointer-events: none;
 }
 
-.links .scroll {
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-  -webkit-transform-origin: left;
-          transform-origin: left;
-  margin: -4rem 0 0 1rem;
-  cursor: pointer;
-}
-
-.links .scroll .line {
-  display: inline-block;
-  width: 70px;
-  height: 1px;
-  background-color: #fff;
-  vertical-align: middle;
-  -webkit-transition: width .2s ease;
-  transition: width .2s ease;
-}
-
-.links .scroll p {
-  display: inline-block;
-  font-size: 1rem;
-  vertical-align: middle;
-  margin-left: 1rem;
-  -webkit-transition: margin-left .2s ease;
-  transition: margin-left .2s ease;
-}
-
-.links .scroll:hover p {
-  margin-left: .2rem;
-}
-
-.links .scroll:hover .line {
-  width: 90px;
+.wrapper {
+  height: 100vh;
+  width: 80vw;
+  margin: 0 auto;
 }
 
 .intro {
-  width: calc(100vw -2rem);
+  width: 60%;
   min-height: 100vh;
-  max-height: 100vh;
-  padding: 1rem;
-  position: relative;
-}
-
-@media (max-width: 768px) {
-  .intro {
-    width: calc(100vw - 4rem);
-    max-height: calc(100vh - 4rem);
-    padding: 2rem;
-  }
-}
-
-.intro .center {
-  width: 55%;
-  height: 100vh;
+  text-align: center;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  pointer-events: all;
 }
 
 @media (max-width: 768px) {
-  .intro .center {
-    width: 65%;
-  }
-}
-
-.glitch {
-  position: relative;
-  animation: glitch-skew 2s infinite linear alternate-reverse;
-  margin-bottom: -1rem;
-}
-
-.glitch::before {
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  left: 2px;
-  text-shadow: -2px 0 #2a2a2a;
-  clip: rect(44px, 450px, 56px, 0);
-  animation: glitch-anim 8s infinite linear alternate-reverse;
-}
-
-.glitch::after {
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  left: -2px;
-  text-shadow: -2px 0 #2a2a2a, 2px 2px #2a2a2a;
-  clip: rect(44px, 450px, 56px, 0);
-  animation: glitch-anim2 8s infinite linear alternate-reverse;
-}
-
-@-webkit-keyframes glitch-anim {
-  0% {
-    clip: rect(95px, 9999px, 34px, 0);
-    -webkit-transform: skew(0.57deg);
-            transform: skew(0.57deg);
-  }
-  10% {
-    clip: rect(7px, 9999px, 81px, 0);
-    -webkit-transform: skew(0.1deg);
-            transform: skew(0.1deg);
-  }
-  20% {
-    clip: rect(71px, 9999px, 71px, 0);
-    -webkit-transform: skew(0.7deg);
-            transform: skew(0.7deg);
-  }
-  30% {
-    clip: rect(98px, 9999px, 12px, 0);
-    -webkit-transform: skew(0.25deg);
-            transform: skew(0.25deg);
-  }
-  40% {
-    clip: rect(64px, 9999px, 87px, 0);
-    -webkit-transform: skew(0.54deg);
-            transform: skew(0.54deg);
-  }
-  50% {
-    clip: rect(41px, 9999px, 91px, 0);
-    -webkit-transform: skew(0.89deg);
-            transform: skew(0.89deg);
-  }
-  60% {
-    clip: rect(39px, 9999px, 17px, 0);
-    -webkit-transform: skew(0.1deg);
-            transform: skew(0.1deg);
-  }
-  70% {
-    clip: rect(59px, 9999px, 63px, 0);
-    -webkit-transform: skew(0.92deg);
-            transform: skew(0.92deg);
-  }
-  80% {
-    clip: rect(11px, 9999px, 4px, 0);
-    -webkit-transform: skew(0.44deg);
-            transform: skew(0.44deg);
-  }
-  90% {
-    clip: rect(11px, 9999px, 16px, 0);
-    -webkit-transform: skew(0.02deg);
-            transform: skew(0.02deg);
-  }
-}
-
-@keyframes glitch-anim {
-  0% {
-    clip: rect(95px, 9999px, 34px, 0);
-    -webkit-transform: skew(0.57deg);
-            transform: skew(0.57deg);
-  }
-  10% {
-    clip: rect(7px, 9999px, 81px, 0);
-    -webkit-transform: skew(0.1deg);
-            transform: skew(0.1deg);
-  }
-  20% {
-    clip: rect(71px, 9999px, 71px, 0);
-    -webkit-transform: skew(0.7deg);
-            transform: skew(0.7deg);
-  }
-  30% {
-    clip: rect(98px, 9999px, 12px, 0);
-    -webkit-transform: skew(0.25deg);
-            transform: skew(0.25deg);
-  }
-  40% {
-    clip: rect(64px, 9999px, 87px, 0);
-    -webkit-transform: skew(0.54deg);
-            transform: skew(0.54deg);
-  }
-  50% {
-    clip: rect(41px, 9999px, 91px, 0);
-    -webkit-transform: skew(0.89deg);
-            transform: skew(0.89deg);
-  }
-  60% {
-    clip: rect(39px, 9999px, 17px, 0);
-    -webkit-transform: skew(0.1deg);
-            transform: skew(0.1deg);
-  }
-  70% {
-    clip: rect(59px, 9999px, 63px, 0);
-    -webkit-transform: skew(0.92deg);
-            transform: skew(0.92deg);
-  }
-  80% {
-    clip: rect(11px, 9999px, 4px, 0);
-    -webkit-transform: skew(0.44deg);
-            transform: skew(0.44deg);
-  }
-  90% {
-    clip: rect(11px, 9999px, 16px, 0);
-    -webkit-transform: skew(0.02deg);
-            transform: skew(0.02deg);
-  }
-}
-
-@-webkit-keyframes glitch-anim2 {
-  0% {
-    clip: rect(16px, 9999px, 76px, 0);
-    -webkit-transform: skew(0.03deg);
-            transform: skew(0.03deg);
-  }
-  10% {
-    clip: rect(37px, 9999px, 4px, 0);
-    -webkit-transform: skew(0.01deg);
-            transform: skew(0.01deg);
-  }
-  20% {
-    clip: rect(64px, 9999px, 25px, 0);
-    -webkit-transform: skew(0.26deg);
-            transform: skew(0.26deg);
-  }
-  30% {
-    clip: rect(72px, 9999px, 65px, 0);
-    -webkit-transform: skew(0.77deg);
-            transform: skew(0.77deg);
-  }
-  40% {
-    clip: rect(28px, 9999px, 84px, 0);
-    -webkit-transform: skew(0.77deg);
-            transform: skew(0.77deg);
-  }
-  50% {
-    clip: rect(39px, 9999px, 26px, 0);
-    -webkit-transform: skew(0.66deg);
-            transform: skew(0.66deg);
-  }
-  60% {
-    clip: rect(59px, 9999px, 72px, 0);
-    -webkit-transform: skew(0.2deg);
-            transform: skew(0.2deg);
-  }
-  70% {
-    clip: rect(83px, 9999px, 57px, 0);
-    -webkit-transform: skew(0.43deg);
-            transform: skew(0.43deg);
-  }
-  80% {
-    clip: rect(21px, 9999px, 90px, 0);
-    -webkit-transform: skew(0.89deg);
-            transform: skew(0.89deg);
-  }
-  90% {
-    clip: rect(35px, 9999px, 38px, 0);
-    -webkit-transform: skew(0.73deg);
-            transform: skew(0.73deg);
-  }
-}
-
-@keyframes glitch-anim2 {
-  0% {
-    clip: rect(16px, 9999px, 76px, 0);
-    -webkit-transform: skew(0.03deg);
-            transform: skew(0.03deg);
-  }
-  10% {
-    clip: rect(37px, 9999px, 4px, 0);
-    -webkit-transform: skew(0.01deg);
-            transform: skew(0.01deg);
-  }
-  20% {
-    clip: rect(64px, 9999px, 25px, 0);
-    -webkit-transform: skew(0.26deg);
-            transform: skew(0.26deg);
-  }
-  30% {
-    clip: rect(72px, 9999px, 65px, 0);
-    -webkit-transform: skew(0.77deg);
-            transform: skew(0.77deg);
-  }
-  40% {
-    clip: rect(28px, 9999px, 84px, 0);
-    -webkit-transform: skew(0.77deg);
-            transform: skew(0.77deg);
-  }
-  50% {
-    clip: rect(39px, 9999px, 26px, 0);
-    -webkit-transform: skew(0.66deg);
-            transform: skew(0.66deg);
-  }
-  60% {
-    clip: rect(59px, 9999px, 72px, 0);
-    -webkit-transform: skew(0.2deg);
-            transform: skew(0.2deg);
-  }
-  70% {
-    clip: rect(83px, 9999px, 57px, 0);
-    -webkit-transform: skew(0.43deg);
-            transform: skew(0.43deg);
-  }
-  80% {
-    clip: rect(21px, 9999px, 90px, 0);
-    -webkit-transform: skew(0.89deg);
-            transform: skew(0.89deg);
-  }
-  90% {
-    clip: rect(35px, 9999px, 38px, 0);
-    -webkit-transform: skew(0.73deg);
-            transform: skew(0.73deg);
-  }
-}
-
-@-webkit-keyframes glitch-skew {
-  0% {
-    -webkit-transform: skew(-3deg);
-            transform: skew(-3deg);
-  }
-  10% {
-    -webkit-transform: skew(2deg);
-            transform: skew(2deg);
-  }
-  20% {
-    -webkit-transform: skew(2deg);
-            transform: skew(2deg);
-  }
-  30% {
-    -webkit-transform: skew(-4deg);
-            transform: skew(-4deg);
-  }
-  40% {
-    -webkit-transform: skew(2deg);
-            transform: skew(2deg);
-  }
-  50% {
-    -webkit-transform: skew(0deg);
-            transform: skew(0deg);
-  }
-  60% {
-    -webkit-transform: skew(0deg);
-            transform: skew(0deg);
-  }
-  70% {
-    -webkit-transform: skew(4deg);
-            transform: skew(4deg);
-  }
-  80% {
-    -webkit-transform: skew(-1deg);
-            transform: skew(-1deg);
-  }
-  90% {
-    -webkit-transform: skew(4deg);
-            transform: skew(4deg);
-  }
-}
-
-@keyframes glitch-skew {
-  0% {
-    -webkit-transform: skew(-3deg);
-            transform: skew(-3deg);
-  }
-  10% {
-    -webkit-transform: skew(2deg);
-            transform: skew(2deg);
-  }
-  20% {
-    -webkit-transform: skew(2deg);
-            transform: skew(2deg);
-  }
-  30% {
-    -webkit-transform: skew(-4deg);
-            transform: skew(-4deg);
-  }
-  40% {
-    -webkit-transform: skew(2deg);
-            transform: skew(2deg);
-  }
-  50% {
-    -webkit-transform: skew(0deg);
-            transform: skew(0deg);
-  }
-  60% {
-    -webkit-transform: skew(0deg);
-            transform: skew(0deg);
-  }
-  70% {
-    -webkit-transform: skew(4deg);
-            transform: skew(4deg);
-  }
-  80% {
-    -webkit-transform: skew(-1deg);
-            transform: skew(-1deg);
-  }
-  90% {
-    -webkit-transform: skew(4deg);
-            transform: skew(4deg);
+  .intro {
+    width: 80%;
   }
 }
 /*# sourceMappingURL=intro.css.map */
