--- a/assets/styles/css/loader.css
+++ b/assets/styles/css/loader.css
@@ -8,10 +8,12 @@
 }
 
 body {
+  background-image: url("../../images/background2.gif");
   font-size: 22px;
-  background: #000;
   color: #fff;
   font-family: "Roboto", sans-serif;
+  cursor: none;
+  scroll-behavior: smooth;
 }
 
 @media (max-width: 768px) {
@@ -20,24 +22,32 @@ body {
   }
 }
 
+button, a {
+  cursor: none;
+}
+
 a {
   color: inherit;
 }
 
 h1 {
-  font-size: 2.6rem;
+  font-size: 3.4rem;
   font-family: "Crimson Text", serif;
+  margin: 0;
+  margin-bottom: 3rem;
 }
 
 @media (max-width: 768px) {
   h1 {
-    font-size: 1.8rem !important;
+    font-size: 1.6rem !important;
+    margin-bottom: 1rem;
   }
 }
 
 h2 {
   font-size: 1.7rem;
   font-weight: 400;
+  margin-bottom: 3rem;
 }
 
 @media (max-width: 768px) {
@@ -48,6 +58,12 @@ h2 {
 
 h3 {
   font-size: 2.1rem;
+}
+
+@media (max-width: 768px) {
+  h3 {
+    font-size: 1.6rem !important;
+  }
 }
 
 h4 {
@@ -64,11 +80,12 @@ h6 {
 
 span, p {
   line-height: 1.4rem;
-  margin: 1.3rem 0;
+  margin: 3rem 0;
 }
 
 @media (max-width: 768px) {
   span, p {
+    margin: 1rem 0;
     line-height: 1rem !important;
   }
 }
@@ -77,8 +94,7 @@ button.border {
   padding: 1rem 1.5rem;
   border: 1px solid;
   background: transparent;
-  cursor: pointer;
-  margin-top: 1rem;
+  margin: 1rem 0;
 }
 
 button.border.white {
@@ -93,13 +109,66 @@ button.border.white:hover {
   background-color: #fff;
 }
 
+.cursor#circle {
+  position: fixed;
+  width: 2rem;
+  height: 2rem;
+  border: 2px solid #fff;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 500px;
+  pointer-events: none;
+  -webkit-transition: .2s ease-out;
+  transition: .2s ease-out;
+  mix-blend-mode: difference;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 500;
+}
+
+.cursor#pointer {
+  position: fixed;
+  width: .2rem;
+  height: .2rem;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 500px;
+  pointer-events: none;
+  -webkit-transition: .05s ease-out;
+  transition: .05s ease-out;
+  background: #fff;
+  mix-blend-mode: difference;
+  z-index: 500;
+}
+
 .container {
-  background: url("../../images/background2.gif");
+  height: 200vh;
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  width: calc(100vw - 5% * 2  - 2em);
+  margin: 0 auto;
+  margin-left: 2em;
+  pointer-events: none;
+}
+
+.wrapper {
+  height: 100vh;
+  width: 80vw;
+  margin: 0 auto;
 }
 
 .loader-container {
   -webkit-transition: all 1s ease;
   transition: all 1s ease;
+  pointer-events: none;
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -113,7 +182,7 @@ button.border.white:hover {
       -ms-flex-pack: center;
           justify-content: center;
   background-color: #000;
-  opacity: 1;
+  z-index: 300;
 }
 
 .loader-container .loader {
