--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -18,12 +18,10 @@
     $laptop: 992px;
     $screen: 1200px;
     //gaps
-    $big-gap: 4rem;
+    $side-gap: 5%;
+    $big-gap: 3rem;
     $mid-gap: 2rem;
     $small-gap: 1rem;
-
-
-// basic settings
 
 * {
     margin: 0;
@@ -32,15 +30,24 @@
     outline: none;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
+    background-image: url('../../images/background2.gif');
     font-size: 22px;
-    background: $black;
     color: $white;
     font-family: $primary-font;
+    cursor: none;
 
     @media (max-width: $tablets) {
         font-size: 12px!important;
     }
+}
+
+button, a {
+    cursor: none;
 }
 
 a {
@@ -48,12 +55,14 @@ a {
 }
 
 h1 { 
-    font-size: 2.6rem; 
+    font-size: 3.4rem; 
     font-family: $secondary-font;
+    margin: 0;
     margin-bottom: $big-gap;
     
     @media (max-width: $tablets) {
-        font-size: 1.8rem!important;
+        font-size: 1.6rem!important;
+        margin-bottom: $small-gap;
     }
 }
 h2 { 
@@ -67,6 +76,9 @@ h2 {
 }
 h3 { 
     font-size: 2.1rem;
+    @media (max-width: $tablets) {
+        font-size: 1.6rem!important;
+    }
 }
 h4 { 
     font-size: 1.8rem; 
@@ -80,19 +92,20 @@ h6 {
 
 span, p {
     line-height: 1.4rem;
-    margin: 1.3rem 0;
+    margin: $big-gap 0;
     
     @media (max-width: $tablets) {
+        margin: $small-gap 0;
         line-height: 1rem!important;
     }
 }
 
 button.border {
+
     padding: 1rem 1.5rem;
     border: 1px solid;
     background: transparent;
-    cursor: pointer;
-    margin-top: 1rem;
+    margin: $small-gap 0;
 
     &.white {
         transition: background-color .5s ease, color .5s ease;
@@ -106,11 +119,51 @@ button.border {
     }
 }
 
+.cursor#circle {
+    position: fixed;
+    width: 2rem;
+    height: 2rem;
+    border: 2px solid $white;
+    transform: translate(-50%, -50%);
+    border-radius: 500px;
+    pointer-events: none;
+    transition: .2s ease-out;
+    mix-blend-mode: difference;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 500;
+
+}
+.cursor#pointer {
+    position: fixed;
+    width: .2rem;
+    height: .2rem;
+    transform: translate(-50%, -50%);
+    border-radius: 500px;
+    pointer-events: none;
+    transition: .05s ease-out;
+    background: $white;
+    mix-blend-mode: difference;
+    z-index: 500;
+}
 
 // --------------- CONTAINERS---------------
 
 // background
 .container {
-    background: url('../../images/background2.gif');
+    height: 200vh;
+    position: absolute;
+    top: $side-gap;
+    left: $side-gap;
+    width: calc(100vw - #{$side-gap} * 2  - 2em);
+    margin: 0 auto;
+    margin-left: 2em;
+    pointer-events: none;
 }
 
+.wrapper {
+    height: 100vh; 
+    width: 80vw;
+    margin: 0 auto;
+}
