--- a/assets/styles/css/intro.css
+++ b/assets/styles/css/intro.css
@@ -7,13 +7,16 @@
   outline: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-image: url("../../images/background2.gif");
   font-size: 22px;
   color: #fff;
   font-family: "Roboto", sans-serif;
   cursor: none;
-  scroll-behavior: smooth;
 }
 
 @media (max-width: 768px) {
@@ -170,15 +173,7 @@ button.border.white:hover {
   min-height: 100vh;
   text-align: center;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin-top: 15vh;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
