--- a/assets/styles/scss/intro.scss
+++ b/assets/styles/scss/intro.scss
@@ -9,9 +9,7 @@
     min-height: 100vh;
     text-align: center;
     margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 15vh;
     flex-direction: column;
     pointer-events: all;
     
